# adventofcode_2020

./: main.py  pyproject.toml
data/: day10_data.py  day11_data.py  day12_data.py  day1_data.py  day2_data.py  day3_data.py  day4_data.py  day5_data.py  day6_data.py  day7_data.py  day8_data.py  day9_data.py
days/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
