[tool.poetry]
name = "adventofcode_2020"
version = "0.1.0"
description = ""
authors = ["Robin Elrharbi-Fleury <robin.elrharbifleury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
